K8s/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: tomvd-pac
spec:
  selector:
    app: mongodb
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
  type: ClusterIP
