K8s/service-pacman.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-service
  namespace: tomvd-pac
spec:
  selector:
    app: pacman-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: LoadBalancer
