K8s/ingress-pacman.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  namespace: tomvd-pac
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tomvd.skyered-devops.de
      http:
        paths:
          - path: /pacman
            pathType: Prefix
            backend:
              service:
                name: pacman-service
                port:
                  name: http
